--- a/lesson_6/index.html
+++ b/lesson_6/index.html
@@ -126,7 +126,7 @@
       </div>
    </main>
    <footer>
-      <a href="#homework">@import url("https://fonts.googleapis.com/css?family=Agbalumo&display=swap");На початок сторінки </a>
+      <a href="#homework">На початок сторінки </a>
    </footer>
 </body>
 
